# gmio

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  LICENSE.txt  README.md  appveyor.yml  travis-build-script.sh
benchmarks/: CMakeLists.txt
benchmarks/bench_assimp/: main.cpp
benchmarks/bench_gmio/: main.c
benchmarks/bench_occ/: main.cpp
benchmarks/benchmark_assimp/: CMakeLists.txt  main.cpp
benchmarks/benchmark_gmio/: CMakeLists.txt  main.c  main.cpp
benchmarks/benchmark_lib3mf/: CMakeLists.txt  main.cpp
benchmarks/benchmark_opencascade/: CMakeLists.txt  main.cpp
benchmarks/benchmark_other/: CMakeLists.txt
benchmarks/commons/: bench_tools.c  bench_tools.h  benchmark_tools.c  benchmark_tools.cpp  benchmark_tools.h
benchs/: CMakeLists.txt
benchs/bench_assimp/: bench_assimp.pro  main.cpp
benchs/bench_gmio/: main.c
benchs/bench_libstl/: bench_libstl.pro  main.c
benchs/bench_occ/: main.cpp  occ.pri
benchs/cmd/: main.cpp
benchs/commons/: bench_tools.c  bench_tools.h
doc/: CMakeLists.txt  Doxyfile  Doxyfile.cmake  footer.html  header.html  main_page.cpp  mainpage.dox
examples/: 3d_mesh.h  CMakeLists.txt  occstl_read_file.cpp  occstl_redefine_mesh_creator.cpp  occstl_write_file.cpp  stl_get_infos.c  stl_read_file.c  stl_write_file.c
src/: CMakeLists.txt  abstract_stream.h  abstract_task_progress.cpp  abstract_task_progress.h  config.h.cmake  convert.h  endian.c  endian.h  error.h  foug_global.h  global.h  io_base.h  stream.c  stream.h  task_control.c  task_control.h  transfer.h
src/c/: config.h.cmake  endian.c  endian.h  error.c  error.h  foug_global.h  global.h  memory.h  stream.c  stream.h  task_control.c  task_control.h  transfer.h
src/c++/: abstract_stream.h  abstract_task_progress.h  foug_global.h  io_base.cpp  io_base.h
src/c++/libstl/: abstract_geometry.h  stl_global.h  stla.cpp  stla.h  stlb.cpp  stlb.h
src/c++/streams/: qt4_stream.cpp  qt4_stream.h  std_io_stream.h
src/c/libstl/: stl_global.h  stl_triangle.h  stla_read.c  stla_read.h  stla_write.c  stla_write.h  stlb.c  stlb.h  stlb_global.h  stlb_read.c  stlb_read.h  stlb_triangle.h  stlb_write.c  stlb_write.h  triangle.h
src/c/support/: occ_libstl.cpp  occ_libstl.h
src/datax_core/: endian.c  error.h  global.h  memory.h  stream.c  stream.h
src/datax_core/internal/: ascii_parse.c  byte_codec.h  byte_swap.h
src/datax_stl/: stl_format.c  stl_format.h  stl_global.h  stl_io.h  stl_triangle.h  stla_read.c  stla_write.c  stlb_read.c  stlb_write.c
src/datax_stl/internal/: stl_rw_common.c  stl_rw_common.h  stlb_byte_swap.c  stlb_byte_swap.h
src/datax_support/: occ_libstl.cpp  occ_libstl.h  qt_stream.cpp  qt_stream.h  support_global.h
src/gmio_amf/: amf_document.h  amf_error.h  amf_global.h  amf_io.c  amf_io.h  amf_io_options.h
src/gmio_core/: buffer.c  buffer.h  config.h.cmake  const_string.h  endian.c  endian.cpp  endian.h  error.c  error.h  global.h  gmio.rc.cmake  gsl_span.h  gsl_util.h  iodevice.cpp  iodevice.h  memblock.c  memblock.h  memory.h  result.h  rwargs.h  span.h  stream.c  stream.h  stream_pos.c  stream_pos.h  streampos.c  streampos.h  task.h  task_control.c  task_control.h  task_iface.h  text_format.h  transfer.c  transfer.h  vecgeom.h  version.h.cmake  zlib_compress.h
src/gmio_core/internal/: ascii_istrstr.c  convert.c  (+65 more)
src/gmio_stl/: stl_constants.h  stl_error.h  stl_format.c  stl_format.cpp  stl_format.h  stl_geom.h  stl_geom_creator.h  stl_global.h  stl_infos.c  stl_infos.cpp  stl_infos.h  stl_io.c  stl_io.cpp  stl_io.h  stl_io_options.h  stl_mesh.h  stl_mesh_creator.cpp  stl_mesh_creator.h  stl_rwargs.h  stl_triangle.c  stl_triangle.cpp  stl_triangle.h  stla_read.c  stla_read.cpp  stla_stats.c  stla_stats.h  stla_write.c  stlb_header.c  stlb_header.cpp  stlb_header.h  stlb_read.c  stlb_read.cpp  stlb_write.c
src/gmio_support/: occ_libstl.cpp  occ_libstl.h  qt_stream.cpp  qt_stream.h  stl_occ.cpp  stl_occ.h  stl_occ_brep.cpp  stl_occ_brep.h  stl_occ_mesh.cpp  stl_occ_mesh.h  stl_occ_meshvs.cpp  stl_occ_meshvs.h  stl_occ_polytri.cpp  stl_occ_polytri.h  stl_occ_utils.h  stream_cpp.h  stream_qt.cpp  stream_qt.h  support_global.h
src/internal/: ascii_parse.c  ascii_parse.h  byte_codec.h  byte_swap.h  convert.c  convert.h
src/libstl/: abstract_geometry.h  stl_error.h  stl_format.c  stl_format.h  stl_geom.h  stl_geom_creator.h  stl_global.h  stl_io.h  stl_triangle.h  stla.cpp  stla.h  stla_read.c  stla_read.h  stla_write.c  stla_write.h  stlb.cpp  stlb.h  stlb_read.c  stlb_read.h  stlb_triangle.h  stlb_write.c  stlb_write.h
src/streams/: qt4_stream.h  std_io_stream.cpp  std_io_stream.h
src/support/: occ_libstl.cpp  occ_libstl.h  qt_stream.cpp  qt_stream.h  support_global.h
tests/: CMakeLists.txt  core_utils.c  core_utils.h  main_test_amf.c  main_test_core.c  main_test_core.cpp  main_test_stl.c  main_test_stl.cpp  stl_testcases.c  stl_testcases.cpp  stl_testcases.h  stl_utils.c  stl_utils.cpp  stl_utils.h  stream_buffer.c  stream_buffer.h  test_amf_io.c  test_core.c  test_core.cpp  test_core_benchmark_fast_atof.c  test_core_benchmark_fast_atof.cpp  test_core_internal.c  test_core_internal.cpp  test_core_platform.c  test_core_platform.cpp  test_internal.c  test_platform.c  test_stl_infos.c  test_stl_infos.cpp  test_stl_internal.c  test_stl_io.c  test_stl_io.cpp  test_stl_triangle.c  test_stl_triangle.cpp  test_stla_stats.c  test_stlb_header.c  test_stlb_header.cpp  tests.pro  utest_assert.h  utest_lib.h  (+3 more)
tests/bench_libstl/: bench_libstl.pro  main.c
tests/bench_occ/: bench_occ.pro  main.cpp  occ.pri
tests/cmd/: cmd.pro  main.cpp
tests/commons/: bench_tools.c  bench_tools.h
tests/fake_support/: CMakeLists.txt  main.cpp
tests/models/: solid_4meshs.le_stlb  solid_4meshs.stla  solid_4vertex.stla  solid_anonymous_empty.stla  solid_empty.stla  solid_empty_name_many_words.stla  solid_empty_name_many_words_single_letters.stla  solid_grabcad_arm11_link0_hb.le_stlb  solid_header_no_facets.le_stlb  solid_jburkardt_sphere.stla  solid_lack_z.stla  solid_one_facet.be_stlb  solid_one_facet.le_stlb  solid_one_facet.stla  solid_one_facet_uppercase.stla
(+103 files in other folders)
